...
                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a0m-Bh-z32">
                                                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="AvatarImage"/>
                                                    </imageView>
                                                </subviews>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qER-dV-dCF">
                                                <rect key="frame" x="16" y="264" width="382" height="35"/>
                                                <accessibility key="accessibilityConfiguration" identifier="TitleLabel"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="35" id="4c0-iz-mSz"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Language" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m5r-09-aIc">
                                                        <rect key="frame" x="90" y="0.0" width="75.5" height="20"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="LanguageLabel"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="20" id="Xej-Ep-23R"/>
...
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qUk-nT-bqJ">
                                                                <rect key="frame" x="0.0" y="0.0" width="382" height="17"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="DescriptionLabel"/>
                                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                                <nil key="textColor"/>
...
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stars" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bLp-4k-rV1">
                                                                        <rect key="frame" x="342.5" y="0.0" width="39.5" height="20"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="StargazersCountLabel"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wathcers" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="erk-jg-HYt">
                                                                        <rect key="frame" x="309.5" y="0.0" width="72.5" height="20"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="WachersCountLabel"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forks" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wkn-pu-8Uc">
                                                                        <rect key="frame" x="340" y="0.0" width="42" height="20"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="ForksCountLabel"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Issues" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UkU-LY-9Ht">
                                                                        <rect key="frame" x="333.5" y="0.0" width="48.5" height="20"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="OpenIssuesCountLabel"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
