...
    private var coordinator: Coordinator!
    private var requestThunkCreator: RepositoryListThunkCreator!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        // Do any additional setup after loading the view.
        title = "検索画面"
        navigationController?.navigationBar.prefersLargeTitles = true
        navigationItem.largeTitleDisplayMode = .automatic
        searchBar.placeholder = "GitHubのリポジトリを検索できるよー"
        searchBar.delegate = self
        tableView.dataSource = nil
        tableView.delegate = nil
...
